multi-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: fitness-pod

spec:
  containers:
    - name: fitness-container
      image: parmith/fit:v1.0.0
      ports:
        - containerPort: 80
 
  containers:
    - name: Vegtable-container
      image: parmith/veg:1.0.0.1
      ports:
        - containerPort: 90
