deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx
  labels:
    first: app
spec: # Behaviour of the replicaset
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec: # behaviour fo the pod
      containers:
        - name: my-container
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: web
  ports:
   - protocol: TCP
     port:  80
     targetPort: 80
  type: ClusterIP
