vegtable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parmith-deployment
  labels:
    first: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: Vegtable-container
          image: parmith/veg:1.0.0.1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: parmith-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30009
  type: NodePort
