gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Gateway
metadata:
  name: parmith-gateway
  namespace: parmith-ns
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: same
